src/objects/Glxy_LeaseSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>Antennas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Antennas</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseAnnualRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseSquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelegatedLease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegated Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Lease_Rep_lkp__c</fullName>
        <description>Delegated Lease</description>
        <formula>IF(DelegatedLease__c = true, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HoldoverExpirationDate__c</fullName>
        <label>Holdover Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoldoverStatusInd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Holdover Status Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAConverstionDate__c</fullName>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAConverstionFY__c</fullName>
        <description>IAConverstionFY</description>
        <formula>IF( 
ISBLANK(IAConverstionDate__c), 
&quot;2099&quot;, 
Text(YEAR(IAConverstionDate__c + 92))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IAConverstionFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Percentage</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LandOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeaseEffectiveDate__c</fullName>
        <label>Lease Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseExpirationDate__c</fullName>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeaseNumber__c</fullName>
        <label>Lease Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseTerminationDate__c</fullName>
        <label>Lease Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NOAPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>NOA Percentage</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NextFYLeases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next FY Leases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParkingOnly__c</fullName>
        <formula>IF(AND(BaseSquareFeet__c = 0, BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c &lt;&gt; 0),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parking Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealtySpecialistEmail__c</fullName>
        <label>Realty Specialist Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCode__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SnapshotName__c</fullName>
        <label>Snapshot Name</label>
        <referenceTo>Galaxy_Snapshot__c</referenceTo>
        <relationshipName>Lease_Snapshot</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SourceRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <referenceTo>Glxy_Lease__c</referenceTo>
        <relationshipName>Lease_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Code__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalIASqft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total IA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNOASqft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total NOA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_IA_Annual_Rent__c</fullName>
        <formula>(BaseAnnualRent__c * IAPercentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total IA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_NOA_Annual_Rent__c</fullName>
        <formula>(BaseAnnualRent__c * NOAPercentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total NOA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <description>SnapShot Name + Lease Number</description>
        <externalId>true</externalId>
        <label>UniqueID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Lease for Snapshot</label>
    <nameField>
        <displayFormat>LH-{0000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leases for Snapshot</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>